# arithmusic

./: .gitignore  CNAME  README.md  README.old.md  asset-manifest.json  bundle.js  config-overrides.js  index.html  package-lock.json  package.json  precache-manifest.c7edff2e976be79268f5b753f53863b4.js  precache-manifest.e1f45d3f86b7a83fb38d6f914301319d.js  service-worker.js  tsconfig.json  tunescript.ts  webpack.config.js
Arithmusic/: bundle.js
public/: index.html
src/: App.css  App.js  index.html  index.tsx  initial-state.js  synthesize.js
src/api/: handlers.js  synthesize.js
src/components/: App.tsx  LikeButton.tsx  custom-plotly.js  editor-controls.js  editor-output.js  editor-panel.js  editor.js  graph.js  modals.js  spectrogram.js  track-controls.js  track-timeline.js
src/components/editor/: editor-output.js  (+5 more)
src/styles/: App.css  App.css.d.ts
src/web-assembly/: Cargo.toml  linear.json  siren.json
static/css/: main.ac0e6078.chunk.css  main.ac0e6078.chunk.css.map
static/js/: 2.7e83e3c7.chunk.js  3.74e6e6a3.chunk.js  3.74e6e6a3.chunk.js.map  main.159cc30a.chunk.js  main.159cc30a.chunk.js.map  main.66619538.chunk.js  main.66619538.chunk.js.map  runtime~main.8186280b.js  runtime~main.8186280b.js.map  runtime~main.b8efb3a7.js  runtime~main.b8efb3a7.js.map
types/: react-materialize.d.ts  react-tabtab.d.ts  react-tex.d.ts
web-assembly/: Cargo.toml  test.json
web-assembly/pkg/: package-lock.json  package.json  synthesis.d.ts  synthesis.js  synthesis_bg.d.ts  synthesis_bg.wasm
web-assembly/src/: frequency.rs  json_format.rs  lib.rs  main.rs  memory.rs
(+6 files in other folders)
