[package]
name = "synthesis"
version = "0.1.0"
authors = ["chris <chris.aturd@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# [profile.release]
# lto = true
[profile.release]
debug = true

[dependencies]
wasm-bindgen = "0.2.46"
web-sys = { version = "0.3.33", features = ["console"] }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
meval = "0.2"
rustfft = "3.0.1"


